src/resolver/snapshots/rv__resolver__tests__dupe_imports_linktsto.txt.snap
---
source: src/resolver/mod.rs
expression: out
---
httpuv=1.6.15 (repository(url: http://cran/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
later=1.4.1 (repository(url: http://cran/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
promises=1.3.2 (repository(url: http://cran/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
R6=2.5.1 (repository(url: http://cran/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
Rcpp=1.0.13-1 (repository(url: http://cran/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
rlang=1.1.4 (repository(url: http://cran/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
fastmap=1.2.0 (repository(url: http://cran/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
magrittr=2.0.3 (repository(url: http://cran/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
