src/resolver/snapshots/rv__resolver__tests__git_pkg_with_remote_dep_overridden.txt.snap
---
source: src/resolver/mod.rs
expression: out
---
gsm.app=2.3.0.9000 (git(url: https://github.com/Gilead-BioStats/gsm.app, sha: somethinglikeasha, directory: None, tag: Some("v2.3.0"), branch: None), type=source, path='', from_lockfile=false, from_remote=false, env_vars=[])
bslib=0.8.0 (repository(url: http://custom/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
cli=3.6.3 (repository(url: http://custom/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
dplyr=1.1.4 (repository(url: http://custom/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
favawesome=0.1.1 (repository(url: http://custom/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
glue=1.8.0 (repository(url: http://custom/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
gsm=2.2.2 (repository(url: http://custom/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
htmltools=0.5.8.1 (repository(url: http://custom/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
htmlwidgets=1.6.4 (repository(url: http://custom/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
jsonlite=1.8.9 (repository(url: http://custom/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
magrittr=2.0.3 (repository(url: http://custom/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
purrr=1.0.2 (repository(url: http://custom/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
rlang=1.1.4 (repository(url: http://custom/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
shiny=1.10.0 (repository(url: http://custom/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
shinyjs=2.1.0 (repository(url: http://custom/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
yaml=2.3.10 (repository(url: http://custom/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
base64enc=0.1-3 (repository(url: http://custom/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
cachem=1.1.0 (repository(url: http://custom/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
fastmap=1.2.0 (repository(url: http://custom/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
jquerylib=0.1.4 (repository(url: http://custom/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
lifecycle=1.0.4 (repository(url: http://custom/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
memoise=2.0.1 (repository(url: http://custom/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
mime=0.12 (repository(url: http://custom/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
sass=0.4.9 (repository(url: http://custom/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
generics=0.1.3 (repository(url: http://custom/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
pillar=1.10.0 (repository(url: http://custom/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
R6=2.5.1 (repository(url: http://custom/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
tibble=3.2.1 (repository(url: http://custom/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
tidyselect=1.2.1 (repository(url: http://custom/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
vctrs=0.6.5 (repository(url: http://custom/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
fontawesome=0.5.3 (repository(url: http://custom/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
rsvg=2.6.1 (repository(url: http://custom/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
digest=0.6.37 (repository(url: http://custom/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
knitr=1.49 (repository(url: http://custom/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
rmarkdown=2.29 (repository(url: http://custom/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
httpuv=1.6.15 (repository(url: http://custom/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
xtable=1.8-4 (repository(url: http://custom/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
sourcetools=0.1.7-1 (repository(url: http://custom/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
later=1.4.1 (repository(url: http://custom/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
promises=1.3.2 (repository(url: http://custom/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
crayon=1.5.3 (repository(url: http://custom/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
withr=3.0.2 (repository(url: http://custom/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
commonmark=1.9.2 (repository(url: http://custom/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
fs=1.6.5 (repository(url: http://custom/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
rappdirs=0.3.3 (repository(url: http://custom/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
utf8=1.2.4 (repository(url: http://custom/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
fansi=1.0.6 (repository(url: http://custom/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
pkgconfig=2.0.3 (repository(url: http://custom/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
evaluate=1.0.1 (repository(url: http://custom/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
highr=0.11 (repository(url: http://custom/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
xfun=0.49 (repository(url: http://custom/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
tinytex=0.54 (repository(url: http://custom/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
Rcpp=1.0.13-1 (repository(url: http://custom/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
