src/resolver/snapshots/rv__resolver__tests__git_pkg_wrong_name.txt.snap
---
source: src/resolver/mod.rs
expression: out
---
--- unresolved --- 
wrong [listed in rproject.toml]: Found package `gsm` from https://github.com/Gilead-BioStats/gsm but it is called `wrong` in the rproject.toml
