src/resolver/snapshots/rv__resolver__tests__local_dep_wrong_name.txt.snap
---
source: src/resolver/mod.rs
expression: out
---
--- unresolved --- 
wrong [listed in rproject.toml]: Found package `dummy` from dummy-pkg but it is called `wrong` in the rproject.toml
