src/resolver/snapshots/rv__resolver__tests__multi-repo-combination-no-suggests.txt.snap
---
source: src/resolver/mod.rs
expression: out
---
slurmtools=0.1.3 (repository(url: http://a2-ai-universe/), type=source, path='', from_lockfile=false, from_remote=false, env_vars=[])
brio=1.1.5 (repository(url: http://p3m/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
dplyr=1.1.4 (repository(url: http://p3m/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
fs=1.6.5 (repository(url: http://p3m/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
glue=1.8.0 (repository(url: http://p3m/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
jsonlite=1.8.9 (repository(url: http://p3m/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
processx=3.8.4 (repository(url: http://p3m/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
purrr=1.0.2 (repository(url: http://p3m/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
rlang=1.1.4 (repository(url: http://p3m/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
tibble=3.2.1 (repository(url: http://p3m/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
whisker=0.4.1 (repository(url: http://p3m/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
withr=3.0.2 (repository(url: http://p3m/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
here=1.0.1 (repository(url: http://p3m/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
cli=3.6.3 (repository(url: http://p3m/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
stringi=1.8.4 (repository(url: http://p3m/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
hms=1.1.3 (repository(url: http://p3m/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
lifecycle=1.0.4 (repository(url: http://p3m/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
log4r=0.4.4 (repository(url: http://p3m/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
generics=0.1.3 (repository(url: http://p3m/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
magrittr=2.0.3 (repository(url: http://p3m/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
pillar=1.9.0 (repository(url: http://p3m/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
R6=2.5.1 (repository(url: http://p3m/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
tidyselect=1.2.1 (repository(url: http://p3m/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
vctrs=0.6.5 (repository(url: http://p3m/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
ps=1.8.1 (repository(url: http://p3m/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
fansi=1.0.6 (repository(url: http://p3m/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
pkgconfig=2.0.3 (repository(url: http://p3m/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
rprojroot=2.0.4 (repository(url: http://p3m/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
utf8=1.2.4 (repository(url: http://p3m/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
