src/resolver/snapshots/rv__resolver__tests__path.txt.snap
---
source: src/resolver/mod.rs
expression: out
---
MASS=7.3-61 (repository(url: http://posit/), type=source, path='4.5.0/Recommended', from_lockfile=false, from_remote=false, env_vars=[])
